[package]
name = "superpatch"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.45"
eframe = "0.35.0"
egui_extras = "0.35.0"
native-dialog = "0.9.7"
open = "5.3.6"
ordered_hash_map = "0.6.0"
rayon = "1.12.0"
regex = "1.13.0"
serde = "1.0.228"
serde_json = "1.0.150"
sevenz-rust2 = "0.21.3"
sysinfo = "0.39.6"
unrar = "0.5.8"
zip = "8.6.0"
